package sk.uniza;

public class Main {

    public static void main(String[] args) {
        new Server().startServer();
    }
}
