@startuml

title __UNIZA's Class Diagram__\n

  namespace sk.uniza {
    abstract class sk.uniza.AbstractServer {
        # userSockets : Set<IUserSocket>
        # AbstractServer()
        {abstract} ~ startServer()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.ConcreteUserSocketCreator {
        ~ createUser()
        ~ createUser()
        ~ createUser()
    }
  }
  

  namespace sk.uniza {
    interface sk.uniza.IServerCallBack {
        {abstract} + onConnect()
        {abstract} + onDisconnect()
        {abstract} + onReceive()
    }
  }
  

  namespace sk.uniza {
    interface sk.uniza.IUserSocket {
        {abstract} + sendData()
        {abstract} + startListening()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.Main {
        {static} + main()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.Server {
        - logger : Logger
        - userSockets : Set<IUserSocket>
        + onConnect()
        + onDisconnect()
        + onReceive()
        ~ startServer()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.TcpServer {
        - logger : Logger
        - serverSocket : ServerSocket
        + run()
        + startServer()
        # TcpServer()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.TcpUserSocket {
        - in : BufferedReader
        - out : PrintWriter
        - socket : Socket
        + TcpUserSocket()
        + sendData()
        + startListening()
        + toString()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.UdpServer {
        - logger : Logger
        - socket : DatagramSocket
        + run()
        + startServer()
        # UdpServer()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.UdpSocketUser {
        - datagramPacket : DatagramPacket
        - socket : DatagramSocket
        - socketAddress : SocketAddress
        + UdpSocketUser()
        + equals()
        + getSocketAddress()
        + hashCode()
        + sendData()
        + startListening()
        + toString()
    }
  }
  

  namespace sk.uniza {
    abstract class sk.uniza.UserSocketCreator {
        {abstract} ~ createUser()
        {abstract} ~ createUser()
        {abstract} ~ createUser()
        ~ registerUser()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.WebSocketUser {
        - socket : WebSocket
        + WebSocketUser()
        + equals()
        + getSocket()
        + hashCode()
        + sendData()
        + startListening()
        + toString()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.WebsocketServer {
        - logger : Logger
        # WebsocketServer()
        ~ startServer()
    }
  }
  

  namespace sk.uniza {
    class sk.uniza.WebsocketServer.InnerWebSocketServer {
        + InnerWebSocketServer()
        + onClose()
        + onError()
        + onMessage()
        + onOpen()
        + onStart()
    }
  }
  

  sk.uniza.AbstractServer o-- sk.uniza.ConcreteUserSocketCreator : concreteUserSocketCreator
  sk.uniza.ConcreteUserSocketCreator -up-|> sk.uniza.UserSocketCreator
  sk.uniza.Server .up.|> sk.uniza.IServerCallBack
  sk.uniza.Server o-- sk.uniza.ConcreteUserSocketCreator : concreteUserSocketCreator
  sk.uniza.TcpServer .up.|> java.lang.Runnable
  sk.uniza.TcpServer -up-|> sk.uniza.AbstractServer
  sk.uniza.TcpServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.TcpUserSocket .up.|> sk.uniza.IUserSocket
  sk.uniza.TcpUserSocket o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.UdpServer .up.|> java.lang.Runnable
  sk.uniza.UdpServer -up-|> sk.uniza.AbstractServer
  sk.uniza.UdpServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.UdpSocketUser .up.|> sk.uniza.IUserSocket
  sk.uniza.WebSocketUser .up.|> sk.uniza.IUserSocket
  sk.uniza.WebSocketUser o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.WebsocketServer -up-|> sk.uniza.AbstractServer
  sk.uniza.WebsocketServer o-- sk.uniza.IServerCallBack : iServerCallBack
  sk.uniza.WebsocketServer o-- sk.uniza.WebsocketServer.InnerWebSocketServer : proxyWebSocketServer
  sk.uniza.WebsocketServer +-down- sk.uniza.WebsocketServer.InnerWebSocketServer
  sk.uniza.WebsocketServer.InnerWebSocketServer -up-|> org.java_websocket.server.WebSocketServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
